bug fixing: #root overflow on small screens

--- a/frontend/src/styles/general.css
+++ b/frontend/src/styles/general.css
@@ -54,6 +54,12 @@ body {
   background: url("./imgs/background-regular.jpg") no-repeat center;
   background-size: cover;
 }
+
+#root {
+  height: 100vh;
+  width: 100vw;
+}
+
 .content {
   position: relative;
   text-align: center;
@@ -195,12 +201,5 @@ body {
   .col-12 {
     width: 100%;
     transition: width 0.3s ease-in-out;
-  }
-}
-
-@media only screen and (max-height: 640px) and (orientation: landscape){
-  #root {
-    height: 100vh;
-    overflow: auto;
   }
 }
